<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>org.jnd.microservices</groupId>
    <artifactId>microservices-reactor</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>
    <name>org.jnd.microservices:microservices-reactor</name>

    <parent>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-parent</artifactId>
            <version>2.0.0.RELEASE</version>
            <relativePath/>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <docker.image.prefix>justindav1s</docker.image.prefix>
        <maven.build.timestamp.format>yyMMdd-HHmmss</maven.build.timestamp.format>
        <jvm.settings>-XX:PermSize=256m -Xmx512m -Djava.security.egd=file:/dev/./urandom</jvm.settings>
    </properties>

    <scm>
        <connection>scm:git:git@github.com:justindav1s/microservices-on-openshift.git</connection>
        <developerConnection>scm:git:git@github.com:justindav1s/microservices-on-openshift.git</developerConnection>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>nexus</id>
            <name>Nexus</name>
            <url>https://nexus-cicd.apps.ocp.datr.eu/repository/maven-snapshots</url>
        </snapshotRepository>
        <repository>
            <id>nexus</id>
            <name>Nexus</name>
            <url>https://nexus-cicd.apps.ocp.datr.eu/repository/maven-release</url>
        </repository>
    </distributionManagement>

    <modules>
	    <!--<module>config</module>-->
        <module>zuul</module>
        <!--<module>hystrix</module>-->
        <!--<module>turbine</module>-->
    </modules>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-netflix</artifactId>
                <version>2.0.0.M8</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/libs-milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.2</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>1.2.3</version>
        </dependency>
    </dependencies>


</project>
